--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "csv-writer": "^1.5.0",
     "faker": "^4.1.0"
+  },
+  "devDependencies": {
+    "moment": "^2.24.0"
   }
 }
